--- a/Grafica/Aplicatia 1/CMakeLists.txt
+++ b/Grafica/Aplicatia 1/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
-project(freegluttest)
-
+project(Aplicatie_1)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(freegluttest main.cpp)
-target_link_libraries(freegluttest -lopengl32 -lfreeglut -lglu32)
+include_directories(include)
+link_directories(lib)
+
+add_executable(Aplicatie_1 main.cpp)
+target_link_libraries(Aplicatie_1 -lopengl32 -lfreeglut -lglu32)
