--- a/Grafica/Aplicatie 3/CMakeLists.txt
+++ b/Grafica/Aplicatie 3/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.23)
 project(Aplicatie_3)
-
 set(CMAKE_CXX_STANDARD 17)
+
+include_directories(include)
+link_directories(lib)
 
 add_executable(Aplicatie_3 main.cpp)
 target_link_libraries(Aplicatie_3 freeglut glu32 opengl32 glew32)
