--- a/Grafica/Aplicatie 6/CMakeLists.txt
+++ b/Grafica/Aplicatie 6/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Aplicatie_6)
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
+link_directories(lib)
 
 add_executable(Aplicatie_6 main.cpp)
 target_link_libraries(Aplicatie_6 freeglut glu32 opengl32 glew32)
