--- a/Grafica/Aplicatie 8/CMakeLists.txt
+++ b/Grafica/Aplicatie 8/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Aplicatie_8)
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
+link_directories(lib)
 
 add_executable(Aplicatie_8 main.cpp)
 target_link_libraries(Aplicatie_8 glu32 opengl32 glew32 freeglut)
