--- a/OOP/Proiect/CMakeLists.txt
+++ b/OOP/Proiect/CMakeLists.txt
@@ -1,6 +1,8 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.22)
 project(Proiect_POO)
+
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_BUILD_TYPE Debug)
 
 include_directories(include)
 
